<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextSearchTerm"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/app_search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSearchType"
        android:layout_width="328dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/radioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchTerm">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/app_radio_movie" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/app_radio_tv" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="onSearchClick"
        android:text="@string/app_search_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSearchType" />
</androidx.constraintlayout.widget.ConstraintLayout>