<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPosterThumbnail"
        android:layout_width="83dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/listview_title_placeholder"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPosterThumbnail"
        app:layout_constraintTop_toTopOf="@+id/imageViewPosterThumbnail" />

    <TextView
        android:id="@+id/textViewYearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/list_view_year_text"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/list_view_year_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/textViewYearText"
        app:layout_constraintStart_toEndOf="@+id/textViewYearText" />

    <Button
        android:id="@+id/buttonDetails"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_button_text"
        app:layout_constraintStart_toStartOf="@+id/textViewYearText"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear" />
</androidx.constraintlayout.widget.ConstraintLayout>